src/browser/monkey-menu.css
:root {
  --focus-color: rgba(0, 0, 0, 0.15);
}


html, body {
  margin: 0;
  padding: 0;
}
body {
  cursor: default;
  font: caption;
  min-height: 450px;
  width: 300px;
  overflow: hidden;
}
body#rendering { display: none; }


#script-list-scroll {
  max-height: 347px;
  overflow-y: auto;
}
#open-menu-commands ~ #script-list-scroll { max-height: 331px; }

hr {
  margin: 6px 0;
}

textarea {
  font-family: monospace;
  font-size: 90%;
  white-space: pre;
}

/******************************** SECTIONS ***********************************/

section {
  margin-left: 0;
  transition-duration: 0.15s;
  transition-property: margin-left;
  width: 100vw;
}

/* The active section gets focus so screen readers report the switch to a new
 * section like a dialog. We don't want the whole section to get a focus
 * outline visually.
 */
section:focus {
  outline: none;
}

/* Hide non-main sections by default. */
section.options,
section.menu-commands,
section.user-script,
section.user-script-options
{
  position: absolute;
  top: 0;
  left: 100vw;
}

/* Slide the main menu away when it's non-active. */
section.main-menu
{ margin-left: -100vw; }
body#main-menu section.main-menu
{ margin-left: 0; }

/* Slide the other menu in when it's active. */
body#options section.options,
body#menu-commands section.menu-commands,
body#user-script section.user-script,
body#user-script-options section.user-script-options
{ margin-left: -100vw; }

/* Second level, when going to third, is even further left! */
body#user-script-options section.user-script
{ margin-left: -200vw; }


section header {
  color: -moz-fieldText;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

section p {
  margin: 0;
  padding: 4px 12px 4px 10px;
}

section h2 {
  font-size: 1rem;
  font-weight: bold;
  margin: 0;
  padding: 7px 12px 1px 10px;
}

section h2 a {
  color: black;
  float: right;
}


section menuitem.go-back {
  box-sizing: content-box;
  color: inherit;
  display: inline-block;
  height: 16px;
  margin: 4px 4px 0 4px;
  padding: 8px;
  vertical-align: -10px;  /* Relative to text, after padding. */
  width: 16px;
}
section menuitem.go-back:hover {
  background-color: var(--focus-color);
}
section menuitem.go-back::before {
  content: url(/skin/back.svg);
}

/********************************** MENUS ************************************/

menu {
  margin: 0;
  padding: 0;
}
menuitem {
  display: block;
  overflow-x: hidden;
  padding: 4px 12px 4px 10px;
  position: relative;
  text-overflow: ellipsis;
  white-space: nowrap;
}
menuitem:focus {
  background-color: var(--focus-color);
  outline: none;
}
menuitem.disabled {
  opacity: 0.65;
}
menuitem .arrow {
  background: url(/skin/next.svg) center center no-repeat;
  display: inline-block;
  height: 100%;
  opacity: 1.0;
  position: absolute;
  right: 12px;
  top: 0;
  transform: rotate(180deg);
  width: 12px;
}

p menuitem {
  padding-left: 0;
  padding-right: 0;
}

menuitem .icon {
  font-size: 14px;
  margin-right: 3px;
  text-align: center;
  width: 16px;
}
menuitem .icon img {
  object-fit: contain;
  max-height: 16px;
  width: 16px;
}

menuitem.user-script {
  padding-right: 24px;
}

menu heading {
  color: #333;
  font-style: italic;
  padding-left: 21px;
}

/***************************** SCRIPT DETAIL *********************************/

/* Scroll the content of the script detail section. */
section.user-script {
  display: flex;
  height: 100vh;
  flex-direction: column;
}
section.user-script menu {
  overflow-y: auto;
}

/**************************** SCRIPT OPTIONS *********************************/

/* Scroll the content of the script options section. */
section.user-script-options {
  display: flex;
  height: 100vh;
  flex-direction: column;
}
section.user-script-options menu {
  overflow-y: auto;
}

section.user-script-options textarea {
  margin-bottom: 3px;
}
section.user-script-options input[type=checkbox] {
  vertical-align: text-top;
}

/******************************** OPTIONS ************************************/

section.options .explain a {
  color: black;
  float: right;
}

section.options #add-exclude-current {
  cursor: pointer;
  display: block;
  margin-top: 4px;
  padding: 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  width: 90vw;
}

/***************************** MENU COMMANDS *********************************/

section.menu-commands .access-key {
  text-decoration: underline;
  text-transform: uppercase;
}

